--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fontsource/poppins": "^5.2.6",
+    "@fontsource/titillium-web": "^5.2.5",
+    "@iconify-json/lucide": "^1.2.43",
+    "@iconify-json/mdi": "^1.2.3",
     "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.7.10",
+    "astro-icon": "^1.1.5",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
